# pydocstruct

./: .gitignore  README.md  README_JP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
pydocstruct/: __init__.py  __version__.py
pydocstruct/core/: __init__.py  chunker.py  document.py  loader.py
pydocstruct/loaders/: __init__.py  csv_loader.py  docx_loader.py  excel_loader.py  html_loader.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py  xml_loader.py
pydocstruct/processors/: __init__.py  html_cleaner.py  metadata_extractor.py  pii_redactor.py  text_cleaner.py
pydocstruct/utils/: __init__.py  file_utils.py
tests/: conftest.py  test_document.py
tests/test_chunkers/: test_chunkers.py
tests/test_loaders/: test_loaders.py
tests/test_processors/: test_processors.py
