[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocstruct"
dynamic = ["version"]
description = "Document structuring library for RAG and vector databases"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["rag", "document", "vector", "embedding", "nlp"]
authors = [
  {name = "Shintaro Amaike", email = "shintaro.amaike@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "flake8>=7.0.0",
  "mypy>=1.10.0",
  "isort>=5.13.0",
]
all = [
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "tabulate>=0.9.0",
  "markdownify>=0.11.0",
  "tiktoken>=0.7.0",
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
]

[project.urls]
Homepage = "https://github.com/shintaro-amaike/pydocstruct"
Documentation = "https://docstruct.readthedocs.io"
Repository = "https://github.com/shintaro-amaike/pydocstruct"
"Bug Tracker" = "https://github.com/shintaro-amaike/pydocstruct/issues"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pydocstruct --cov-report=html --cov-report=term"